added JWT token and login authentication logic
