# web-nodejs/src/config/swagger-output.json
@@ -114,6 +114,16 @@
           }
         }
       }
+    },
+    "/practice/user/loginUser": {
+      "post": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
     }
   }
 }
